获取博文 Api 改为 Rest 风格获取 pom的启动类引用修改

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -44,7 +44,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.2.6.RELEASE</version>
                 <configuration>
-                    <mainClass>com.monggo.ApiApplication</mainClass>
+                    <mainClass>top.faig.blog.ApiApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
