--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,6 +15,12 @@
 
         <dependency>
             <groupId>top.faig</groupId>
+            <artifactId>code</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>top.faig</groupId>
             <artifactId>common</artifactId>
             <version>0.1.0</version>
         </dependency>
