--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>common</module>
         <module>api</module>
         <module>system</module>
+        <module>code</module>
     </modules>
 
     <properties>
