--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -48,9 +48,9 @@ spring:
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
 #mybatis
 mybatis-plus:
-  mapper-locations: classpath*:/mapper/*.xml
+  mapper-locations: classpath*:/*/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
-  type-aliases-package: top.faig.blog.code.entity
+  type-aliases-package: top.faig.blog.code.*.entity
   global-config:
     #数据库相关配置
     db-config:
